Adds support for storing location information.
- Allows for the location to be stored and retrieves the
corresponding latitude, longitude, and temperature information.

Note: There can be an issue when requesting an invalid location.
